--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nextjs-notion-starter-kit",
+  "homepage": "https://qubit-fernand.github.io",
   "version": "2.0.0",
   "private": true,
   "description": "The perfect starter kit for building beautiful websites with Next.js and Notion.",
