--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,13 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 22
           cache: yarn
+          cache-dependency-path: yarn.lock
 
       - run: yarn install --frozen-lockfile
       - name: build
