--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
+    "deploy:docs": "bash scripts/deploy-docs.sh",
     "deploy": "vercel deploy",
     "deps": "run-s deps:*",
     "deps:update": "[ -z $GITHUB_ACTIONS ] && yarn add notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
