--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
         with:
           node-version: 22
 
-      - run: yarn install --frozen-lockfile
+      - run: npm ci
       - name: build
 #        TODO Enable those lines below if you use a Redis cache, you'll also need to configure GitHub Repository Secrets
 #        env:
 #          REDIS_HOST: ${{ secrets.REDIS_HOST }}
 #          REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
-        run: yarn build
+        run: npm run build
